# den2obj

./: .buildinfo  .codecov.yml  .gitignore  .gitlab-ci.yml  README.md  background.html  community_guidelines.html  d2o_fileformat.html  examples.html  faq.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  tutorial.html  user_interface.html
.github/workflows/: build-openvdb.yml  build.yml  c-cpp.yml  docs.yml  draft-pdf.yml  stats.yml
_sources/: faq.rst.txt  index.rst.txt  installation.rst.txt  tutorial.rst.txt  user_interface.rst.txt
docker/: Dockerfile
docs/: background.rst  community_guidelines.rst  conf.py  d2o_fileformat.rst  examples.rst  faq.rst  index.rst  installation.rst  tutorial.rst  user_interface.rst
docs/_build/doctrees/: background.doctree  d2o_fileformat.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  user_interface.doctree
docs/_build/html/: .buildinfo  background.html  d2o_fileformat.html  examples.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  user_interface.html
docs/_build/html/_sources/: d2o_fileformat.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt
docs/_build/html/_static/css/: custom.css
docs/_static/img/: .gitignore
docs/_templates/: breadcrumbs.html  layout.html
examples/: README.md
examples/shared/: CMakeLists.txt  test_shared.cpp
paper/: .gitignore  compile.sh  paper.bib  paper.jats  paper.md
scripts/: .gitignore  benzene_mo.py  genus2.py
src/: CMakeLists.txt  check_endian.h  cli_format.cpp  cli_format.h  config.h.in  d2o_format.cpp  d2o_format.h  den2obj.cpp  den2obj.pc.in  edgetable.h  float_parser.h  generator.cpp  generator.h  generator_benzene_data.h  generator_sto3g_data.h  isosurface.cpp  isosurface.h  isosurface_mesh.cpp  isosurface_mesh.h  math.h  periodic_table.cpp  periodic_table.h  scalar_field.cpp  scalar_field.h  triangletable.h
src/test/: CMakeLists.txt  test_d2o_fileformat.cpp  test_d2o_fileformat.h  test_file_creation.cpp  test_file_creation.h  test_generator.cpp  test_generator.h  test_isosurface.cpp  test_isosurface.h  test_scalarfield.cpp  test_scalarfield.h  unittest.cpp
src/test/testinput/: .gitignore  ch4.d2o
